add_library(
    delegate 
    STATIC
    CombatLogDelegate.cpp
    CombatLogDelegate.h
    InitiativeDelegate.cpp
    InitiativeDelegate.h
    layout/InitiativeLayout.cpp
    layout/InitiativeLayout.h
    layout/CombatLogLayout.h
    PainterUtils.cpp
    PainterUtils.h
)

target_include_directories(
    delegate 
    PUBLIC 
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/layout
)

target_link_libraries(
    delegate 
    PUBLIC 
    shared 
    controller
    model 
    style
    #view
)